fix: поправить overflow

--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body {
     display: flex;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     padding: 0;
     flex-wrap: wrap;
 }
